<resources>
    <string name="app_name">سهام عدالت کارا</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="next">ادامه</string>
    <string name="menu_home"></string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="trust">هزینه انجام خدمات 50,000  تومان میباشد برای ادامه و ثبت درخواست دکمه تایید را بفشارید</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancell">لغو</string>
    <string name="ok">تایید</string>
    <string name="agree">بدین وسیله به اطلاع میرساند شما با استفاده از این اپلیکیشن قادر خواهید بود که استعلام داراییی های سهام عدالت خود را مشاهده کرده قمت روز آنها را دیده و نسبت به فروش آنها اقدام کنید با توجه به این که درخواست فروش ثبت شده در این اپلیکیشن مستقیما به کارگزاری مربوطه ارجاع میشود و مبلغ حاصل از فروش سهام عدالت به صورت تدریجی به شماهر شبا ثبت شده در سامانه سهام عدالت واریز میگردد این گروه نرم افزاری نسبت به واریز وجه سهام فروخته شده از طریق کارگزاری هیچ مسولیتی در قبال نحوه فروش سهام عدالت متقاضی نداشته و پیگیری واریز وجه سهام عدالت از طریق سامانه معاملاتی سهام عدالتد کارگزاری مذکور امکان پذیر است</string>
    <string name="help">1- بعد از ارسال فرم و انجام روند پرداخت پیامک ثبت درخواست برای شما ارسال خواهد شد (در صورت بسته نبودن پیامک تبلیغاتی)</string>
    <string name="help2">2- مشاوران ما حداکثر در ۴۸ ساعت کاری آینده با شما تماس خواهند گرفت</string>
    <string name="help3">3- شما میتوانید در صفحه اصلی بر روی آیکن لیست سفارشات کلیک کرده و لیست سفارشات فروش سهام عدالت خود را مشاهده نمایید</string>
    <string name="help4">4- در صورت بروز مشکل میتوانید با پشتیبانی ذکر شده در قسمت لیست سفارشات تماس حاصل فرمایید</string>
</resources>