<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
android:backgroundTint="#E4E5E6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        app:cardCornerRadius="20dp"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:gravity="center"
        android:textSize="20dp"
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
android:lineSpacingExtra="5dp"
        android:text="@string/trust"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_marginTop="93dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/btn_nagetive"
            android:layout_marginRight="5dp"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:text="@string/cancell"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/back_nagetive" />

        <TextView
            android:id="@+id/btn_positive"
            android:layout_marginLeft="5dp"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/ok"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/back_positive" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>