<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F1E8"
    tools:context="com.khobre.karayek.ui.sell_khobre_webView.Sell_whith_Khobre">

    <include
        android:id="@+id/include3"
        layout="@layout/layout_toolbar_sell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="نام و نام خانوادگی"
        app:layout_constraintBottom_toTopOf="@+id/ed_input_name"
        app:layout_constraintEnd_toEndOf="@+id/ed_input_name"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@+id/ed_input_name"
        app:layout_constraintTop_toBottomOf="@+id/include3"
        app:layout_constraintVertical_bias="0.92" />

    <EditText
        android:id="@+id/ed_input_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/beck_ed_text"
        android:hint="نام و نام خانوادگی"
        android:inputType="text"
        android:padding="10dp"
        android:textDirection="rtl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include3"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="شماره همراه"
        android:textColor="#000"
        app:layout_constraintBottom_toTopOf="@+id/ed_phone_number"
        app:layout_constraintEnd_toEndOf="@+id/ed_phone_number"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="@+id/ed_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/ed_input_name" />

    <EditText
        android:id="@+id/ed_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/beck_ed_text"
        android:hint="09123456789"
        android:inputType="number"
        android:layoutDirection="rtl"
        android:maxLength="11"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="@+id/ed_input_name"
        app:layout_constraintStart_toStartOf="@+id/ed_input_name"
        app:layout_constraintTop_toBottomOf="@+id/ed_input_name"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="کد ملی"
        android:textColor="#000"
        app:layout_constraintBottom_toTopOf="@+id/ed_input_person_id"
        app:layout_constraintEnd_toEndOf="@+id/ed_input_person_id"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="@+id/ed_input_person_id"
        app:layout_constraintTop_toBottomOf="@+id/ed_phone_number" />

    <EditText
        android:id="@+id/ed_input_person_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/beck_ed_text"
        android:hint="0123456789"
        android:inputType="number"
        android:layoutDirection="rtl"
        android:maxLength="10"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ed_phone_number"
        app:layout_constraintStart_toStartOf="@+id/ed_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/ed_phone_number"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/btn_buy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back_button"
        android:clickable="true"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="3.5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_input_person_id"
        app:layout_constraintVertical_bias="0.050000012" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorPrimary"
        app:cardCornerRadius="15dp"
        app:cardMaxElevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_buy">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"

                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/help"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"

                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/help2"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"

                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/help3"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
android:paddingLeft="5dp"
           android:paddingRight="5dp"
                android:text="@string/help4"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />
            >
        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>